<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFD5"
    tools:context=".CoffeeController">

    <TextView
        android:id="@+id/coffeeSubTotal"
        android:layout_width="285sp"
        android:layout_height="33sp"
        android:layout_marginBottom="16sp"
        android:background="#F1F1F1"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="@+id/addButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/mocha"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150sp"
        android:layout_height="170sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073"
        app:srcCompat="@drawable/coffeeclipart" />

    <CheckBox
        android:id="@+id/sweetCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44sp"
        android:layout_marginTop="32sp"
        android:onClick="updatePriceFromClick"

        android:text="@string/flavor1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <CheckBox
        android:id="@+id/frenchVanilla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flavor2"
        android:onClick="updatePriceFromClick"
        app:layout_constraintStart_toStartOf="@+id/sweetCream"
        app:layout_constraintTop_toBottomOf="@+id/sweetCream" />

    <CheckBox
        android:id="@+id/irishCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flavor3"
        android:onClick="updatePriceFromClick"
        app:layout_constraintStart_toStartOf="@+id/frenchVanilla"
        app:layout_constraintTop_toBottomOf="@+id/frenchVanilla" />

    <CheckBox
        android:id="@+id/caramel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flavor4"
        android:onClick="updatePriceFromClick"
        app:layout_constraintStart_toStartOf="@+id/irishCream"
        app:layout_constraintTop_toBottomOf="@+id/irishCream" />

    <CheckBox
        android:id="@+id/mocha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flavor5"
        android:onClick="updatePriceFromClick"
        app:layout_constraintStart_toStartOf="@+id/caramel"
        app:layout_constraintTop_toBottomOf="@+id/caramel" />

    <Spinner
        android:id="@+id/amountSpinner"
        android:layout_width="124sp"
        android:layout_height="63sp"
        android:layout_marginTop="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sizeSpinner"
        app:layout_constraintTop_toBottomOf="@+id/sizeSpinner" />

    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="125sp"
        android:layout_height="56sp"
        android:layout_marginStart="52sp"
        android:layout_marginTop="92sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/frenchVanilla"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="285sp"
        android:layout_height="56sp"
        android:onClick="addToOrder"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.887" />

    <TextView
        android:id="@+id/textView6"
        android:text="@string/sub"
        android:layout_width="285sp"
        android:layout_height="18sp"
        android:background="#F1F1F1"
        app:layout_constraintBottom_toTopOf="@+id/coffeeSubTotal"
        app:layout_constraintEnd_toEndOf="@+id/coffeeSubTotal"
        app:layout_constraintStart_toStartOf="@+id/coffeeSubTotal" />

</androidx.constraintlayout.widget.ConstraintLayout>