<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFD5"
    tools:context=".DonutPurchaseController">

    <TextView
        android:id="@+id/donutSubTotal"
        android:layout_width="285sp"
        android:layout_height="33sp"
        android:background="#F1F1F1"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="285sp"
        android:layout_height="18sp"
        android:layout_marginTop="52sp"
        android:background="#F1F1F1"
        android:text="@string/sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutAmountSpinner" />

    <ImageView
        android:id="@+id/donutDisplay"
        android:layout_width="197sp"
        android:layout_height="159sp"
        android:layout_marginTop="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/munchkins" />

    <Spinner
        android:id="@+id/donutAmountSpinner"
        android:layout_width="148sp"
        android:layout_height="57sp"
        android:layout_marginTop="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutName" />

    <TextView
        android:id="@+id/donutName"
        android:layout_width="258sp"
        android:layout_height="29sp"
        android:layout_marginTop="56sp"
        android:text="@string/donut"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutDisplay" />

    <Button
        android:id="@+id/button3"
        android:layout_width="293sp"
        android:layout_height="50sp"
        android:layout_marginTop="98sp"
        android:onClick="addToOrder"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />
</androidx.constraintlayout.widget.ConstraintLayout>